--- a/kubeadm/Vagrantfile
+++ b/kubeadm/Vagrantfile
@@ -13,12 +13,12 @@ WRK_MEM   = 4096
 
 Vagrant.configure("2") do |config|
 
-  config.vm.define "master-node" do |sub|
+  config.vm.define "master-1" do |sub|
     # make sure you specified correctly your bridge and dev. type `ip a` to check
     sub.vm.network "private_network", ip: "172.16.0.2", "bridge": "enp2s0", "dev": "enp2s0"
-    config.vm.network "forwarded_port", guest: 2222, host: 2222
     sub.vm.box = IMAGE
-    sub.vm.hostname = "master-node"
+    # reserved for future control plane high availability
+    sub.vm.hostname = "master-1"
     sub.vm.provider :libvirt do |libvirt|
       libvirt.nested = true
       libvirt.cpus = CTL_CPU 
@@ -27,12 +27,11 @@ Vagrant.configure("2") do |config|
   end
 
   (1..WRK_NODES).each do |i|
-    config.vm.define "node-#{i}" do |sub|
+    config.vm.define "worker-#{i}" do |sub|
     # same story here
     sub.vm.network "private_network", ip: "172.16.0.#{i+2}", "bridge": "enp2s0", "dev": "enp2s0"
-    config.vm.network "forwarded_port", guest: 2222, host: 2222
     sub.vm.box = IMAGE
-    sub.vm.hostname = "node-#{i}"
+    sub.vm.hostname = "worker-#{i}"
     sub.vm.provider :libvirt do |libvirt|
       libvirt.nested = true
       libvirt.cpus = WRK_CPU
@@ -43,8 +42,8 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "ansible" do |ansible|
     ansible.groups = {
-      "master" => ["master-node"],
-      "node" => ["node-1", "node-2"]
+      "master" => ["master-1"],
+      "worker" => ["worker-1", "worker-2"]
     }
     ansible.playbook = "ping.yaml"
   end
